fixing navabr spacing

--- a/crux-conqueror/src/main/resources/static/css/navbar.css
+++ b/crux-conqueror/src/main/resources/static/css/navbar.css
@@ -24,3 +24,7 @@ nav button {
     padding: 6px 12px;
     cursor: pointer;
 }
+body {
+    margin: 0;
+    padding: 0;
+}
